--- a/index.html
+++ b/index.html
@@ -1,41 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<style>
+		:root {
+			font-family: sans-serif;
+			box-sizing: border-box;
+		}
+		html, body {
+			width: 100%;
+			height: 100%;
+			margin: 0px;
+			position: absolute;
+			background-color: #000;
+		}
+		#container {
+			margin: 20px;
+			padding: 15px;
+			background-color: #0039;
+			color: whitesmoke;
+			font-size: 20px;
+			border: ridge 10px #CC4;
+			animation: border-animation 20s infinite alternate linear;
+			min-height: calc(100vh - 2 * (20px + 10px + 15px));
+		}
+		@media screen and (max-width: 600px) {
+			#container {
+				margin: 0px;
+				padding: 15px 1.5vw;
+				border-width: 2vw;
+				background-color: #0046;
+				min-height: calc(100vh - 2 * (15px + 2vw));
+			}
+		}
+		#header {
+			text-align: center;
+		}
+		footer {
+			position: sticky;
+			top: 100%;
+		}
+		label {
+			font-size: 130%;
+			display: block;
+		}
+		#open {
+			font-size: 150%;
+		}
+		a {
+			color: #00C400;
+		}
+		a:hover {
+			color: #00EC00;
+		}
+		a:active {
+			color: #0F0;
+		}
+		#grid {
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			width: min-content;
+			gap: 10px;
+			margin-bottom: 10px;
+		}
+		#grid label {
+			text-align: right;
+			align-self: center;
+		}
+		select {
+			font-size: 130%;
+		}
+	</style>
 </head>
 <body>
-  <h1>Starfield generator</h1>
-  <form action="starfield.html" method="get">
-    <label title="If checked, the starfield will slowly move. Decreases performance.">
-      Scroll
-      <input type="checkbox" name="scroll">
-    </label>
-    <br>
-    <label title="Controls the amount of color the stars will have.">
-      Color
-      <select name="color">
-        <option value="none">None</option>
-        <option value="low">Low</option>
-        <option value="medium" selected>Medium</option>
-        <option value="high">High</option>
-        <option value="very-high">Very High</option>
-      </select>
-    </label>
-    <br>
-    <label title="Controls the number of stars.">
-      Density
-      <select name="density">
-        <option value="very-low">Very Low</option>
-        <option value="low">Low</option>
-        <option value="medium" selected>Medium</option>
-        <option value="high">High</option>
-        <option value="very-high">Very High</option>
-      </select>
-    </label>
-    <br>
-    <button type="submit">Open starfield</button>
-  </form>
+	<div id="container">
+		<h1 id="header">Starfield Generator</h1>
+		<form action="starfield.html" method="get">
+			<div id="grid">
+				<label title="If checked, the starfield will slowly move. Decreases performance." for="scroll">
+					Scroll
+				</label>
+				<input type="checkbox" name="scroll" title="If checked, the starfield will slowly move. Decreases performance.">
+				<label title="Controls the amount of color the stars will have." for="color">
+					Color
+				</label>
+				<select name="color" title="Controls the amount of color the stars will have.">
+					<option value="none">None</option>
+					<option value="low">Low</option>
+					<option value="medium" selected>Medium</option>
+					<option value="high">High</option>
+					<option value="very-high">Very High</option>
+				</select>
+				<label title="Controls the number of stars." for="density">
+					Density
+				</label>
+				<select name="density" title="Controls the number of stars.">
+					<option value="very-low">Very Low</option>
+					<option value="low">Low</option>
+					<option value="medium" selected>Medium</option>
+					<option value="high">High</option>
+					<option value="very-high">Very High</option>
+				</select>
+			</div>
+			<button type="submit" id="open">Open starfield</button>
+		</form>
+		<footer>
+			By <a href="https://github.com/BalaM314/">BalaM314</a>. <a href="https://github.com/BalaM314/starfield">Open source.</a>
+		</footer>
+	</div>
 </body>
 </html>
