--- a/starfield.html
+++ b/starfield.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Starfield</title>
   <script type="module" src="src/ui.js" defer></script>
   <link rel="stylesheet" href="starfield.css">
 </head>
 <body>
-  <canvas id="canvas"></canvas>
+  <canvas id="canvas">
+    Your browser does not support the HTML5 Canvas element, which is required by this webpage.
+    Please use a modern browser to view this webpage.
+  </canvas>
 </body>
 </html>
