add another layer

--- a/starfield.html
+++ b/starfield.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="starfield.css">
 </head>
 <body>
-  <canvas id="canvas">
+  <canvas id="canvas1">
     Your browser does not support the HTML5 Canvas element, which is required by this webpage.
     Please use a modern browser to view this webpage.
   </canvas>
+  <canvas id="canvas2"></canvas>
 </body>
 </html>
