Add nebulas to UI

--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
 					Big stars
 				</label>
 				<input type="checkbox" name="size-high" title="If checked, the starfield will have some big stars.">
+				<label title="If checked, the starfield will have nebulas (colored clouds)." for="nebulas">
+					Nebulas
+				</label>
+				<input type="checkbox" name="nebulas" title="If checked, the starfield will have nebulas (colored clouds).">
 				<label title="Controls the amount of color the stars will have." for="color">
 					Color
 				</label>
